[tool.poetry]
name = "mom.py"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]

packages = [
    {include = "mom", from="."}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
scipy = "^1.8.1"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
